cnp-edge-rules/220a926c-51f6-4179-a5c3-093f34508fd2/policies.yaml
- log: true
  apiVersion: cilium.io/v2
  kind: CiliumClusterwideNetworkPolicy
  spec:
    endpointSelector: {}
    egress:
      - {}
    egressDeny: []
    ingress:
      - fromEndpoints:
          - matchLabels:
              nsx-group: 7-9-8-8
        fromCIDR:
          - 3.4.5.9/32
    ingressDeny: []
  objectId: 7028b611-3cb5-433f-8eb7-65b802494258
  metadata:
    uid: 7028b611-3cb5-433f-8eb7-65b802494258
    name: ahmar-section-1
